<resources>
    <string name="app_name">System Machine</string>
    <string name="write_name">Write your name</string>
    <string name="write_phone">Write your phone</string>
    <string name="write_pass">Write your password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="clickLogin">CLICK HERE TO LOGIN</string>
    <string name="clickRegister">CLICK HERE TO Register</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="btn_disable">Add items to shopping</string>
    <string name="btn_enable">Click to continue shopping</string>
    <string name="del_from_wish_list">Delete From Wish List</string>
    <string name="add_to_wish_list">Add To Wish List</string>
    <string name="del_from_cart">Delete From Cart</string>
    <string name="delete">Delete</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="process_shopping">Process Shopping</string>
    <string name="machine_name">Machine Name:</string>
    <string name="desc">Description</string>
    <string name="price">Price</string>
    <string name="qty">QTY</string>
    <string name="total">Total</string>
    <string name="total_amount">Total Amount:</string>
    <string name="sr">SR</string>
    <string name="confirm_bill">Confirm Bill</string>
    <string name="purchase_order">PURCHASE ORDER</string>
    <string name="take_sure">Please take sure from all information in this form</string>
    <string name="description_of_the_order_list">Description of the order list</string>
    <string name="back_to_main">Back to main</string>
    <string name="title_activity_account">Account Activity</string>
</resources>
